--- a/lang/perl/Makefile
+++ b/lang/perl/Makefile
@@ -1,7 +1,11 @@
 # : Makefile.SH,v 5501Revision: 1.1.1.1 5501Date: 1993/08/23 21:29:33 $
 #
 # $Log: Makefile,v $
-# Revision 1.4  1993/12/30 05:00:07  smace
+# Revision 1.5  1994/01/06 07:00:55  jkh
+# Prepare for new ports organization.  Remove old src target, clean up pkg
+# data files accordingly.
+#
+# Revision 1.4  1993/12/30  05:00:07  smace
 # Changed default install path back to /usr/local per Nate's request
 #
 # Revision 1.3  1993/12/30  01:32:15  smace
@@ -346,13 +350,10 @@ shlist:
 	echo $(sh) | tr ' ' '\012' >.shlist
 
 
-pkg:	pkg_src pkg_bin
+pkg:	pkg_bin
 
-pkg_src: clean pkg/+DESC_S pkg/+ONELINE_S pkg/+PLIST_S
-	pkg_create -c pkg/+ONELINE_S -d pkg/+DESC_S -f pkg/+PLIST_S perl_src
-
-pkg_bin: install pkg/+DESC_B pkg/+ONELINE_B pkg/+PLIST_S
-	pkg_create -c pkg/+ONELINE_B -d pkg/+DESC_B -f pkg/+PLIST_B perl_bin
+pkg_bin: install pkg/+DESC pkg/+ONELINE pkg/+PLIST
+	pkg_create -c pkg/+ONELINE -d pkg/+DESC -f pkg/+PLIST perl_bin
 
 # AUTOMATICALLY GENERATED MAKE DEPENDENCIES--PUT NOTHING BELOW THIS LINE
 $(obj) hash.o:
