--- a/lang/tcl/Makefile
+++ b/lang/tcl/Makefile
@@ -162,13 +162,10 @@ test: tcltest
 	cd $(SRC_DIR); TCL_LIBRARY=`pwd`/library; export TCL_LIBRARY; \
 	cd $$cwd; ( echo cd $(SRC_DIR)/tests\; source all ) | ./tcltest
 
-pkg:	pkg_src pkg_bin
+pkg:	pkg_bin
 
-pkg_src: pkg/+DESC_S pkg/+ONELINE_S pkg/+PLIST_S clean
-	pkg_create -c pkg/+ONELINE_S -d pkg/+DESC_S -f pkg/+PLIST_S tcl_src
-
-pkg_bin: pkg/+DESC_B pkg/+ONELINE_B pkg/+PLIST_B all install
-	pkg_create -c pkg/+ONELINE_B -d pkg/+DESC_B -f pkg/+PLIST_B tcl_bin
+pkg_bin: pkg/+DESC pkg/+ONELINE pkg/+PLIST all install
+	pkg_create -c pkg/+ONELINE -d pkg/+DESC -f pkg/+PLIST tcl_bin
 
 install: install-binaries install-libraries install-man
 
