--- a/comm/kermit/Makefile
+++ b/comm/kermit/Makefile
@@ -31,12 +31,9 @@ ckcpro.c: wart
 
 CLEANFILES+= ckcpro.c wart
 
-pkg:	pkg_src pkg_bin
+pkg:	pkg_bin
 
-pkg_src: clean pkg/+DESC_S pkg/+ONELINE_S pkg/+PLIST_S
-	pkg_create -c pkg/+ONELINE_S -d pkg/+DESC_S -f pkg/+PLIST_S kermit_src
-
-pkg_bin: install pkg/+DESC_B pkg/+ONELINE_B pkg/+PLIST_B
-	pkg_create -c pkg/+ONELINE_B -d pkg/+DESC_B -f pkg/+PLIST_B kermit_bin
+pkg_bin: install pkg/+DESC pkg/+ONELINE pkg/+PLIST
+	pkg_create -c pkg/+ONELINE -d pkg/+DESC -f pkg/+PLIST kermit_bin
 
 .include <bsd.prog.mk>
