--- a/comm/term/Makefile
+++ b/comm/term/Makefile
@@ -70,13 +70,10 @@ installman:
 	done
 
 
-pkg:	pkg_src pkg_bin
+pkg:	pkg_bin
 
-pkg_src: clean pkg/+DESC_S pkg/+ONELINE_S pkg/+PLIST_S 
-	pkg_create -c pkg/+ONELINE_S -d pkg/+DESC_S -f pkg/+PLIST_S term_src
-
-pkg_bin: install pkg/+DESC_B pkg/+ONELINE_B pkg/+PLIST_B 
-	pkg_create -c pkg/+ONELINE_B -d pkg/+DESC_B -f pkg/+PLIST_B term_bin
+pkg_bin: install pkg/+DESC pkg/+ONELINE pkg/+PLIST 
+	pkg_create -c pkg/+ONELINE -d pkg/+DESC -f pkg/+PLIST term_bin
 
 client.a: $(CLIENTOBJS)
 	$(RM) client.a
