--- a/x11/jpeg/Makefile
+++ b/x11/jpeg/Makefile
@@ -123,13 +123,10 @@ install: all
 	install -c  -m 444 -o bin -g bin djpeg.1 /usr/local/man/man1
 
 
-pkg:	pkg_bin pkg_src
+pkg:	pkg_src
 
-pkg_src: clean pkg/+DESC_S pkg/+ONELINE_S pkg/+PLIST_S
-	pkg_create -c pkg/+ONELINE_S -d pkg/+DESC_S -f pkg/+PLIST_S jpeg_src
-
-pkg_bin: install pkg/+DESC_B pkg/+ONELINE_B pkg/+PLIST_B
-	pkg_create -c pkg/+ONELINE_B -d pkg/+DESC_B -f pkg/+PLIST_B jpeg_bin
+pkg_bin: install pkg/+DESC pkg/+ONELINE pkg/+PLIST
+	pkg_create -c pkg/+ONELINE -d pkg/+DESC -f pkg/+PLIST jpeg_bin
 
 jbsmooth.o : jbsmooth.c jinclude.h jconfig.h jpegdata.h 
 jcarith.o : jcarith.c jinclude.h jconfig.h jpegdata.h 
