Add Gary Jennejohn's changes to support floating point, kernel debugging and core files.

--- a/devel/gdb/bfd/Makefile.in
+++ b/devel/gdb/bfd/Makefile.in
@@ -145,6 +145,7 @@ BFD32_BACKENDS = \
 	i386lynx.o \
 	i386lynx-cf.o \
 	netbsd386.o \
+	freebsd386.o \
 	i386mach3.o \
 	ieee.o \
 	m68klynx.o \
@@ -217,7 +218,7 @@ CFILES = libbfd.c opncls.c bfd.c archive.c targets.c cache.c \
 	 coff-a29k.c coff-rs6000.c coffgen.c format.c \
 	 section.c core.c syms.c stab-syms.c reloc.c init.c ctor.c \
 	 seclet.c coff-m88k.c coff-mips.c coff-sh.c trad-core.c newsos3.c \
-	 i386aout.c i386linux.c netbsd386.c i386mach3.c bout.c aout-adobe.c coff-we32k.c \
+	 i386aout.c i386linux.c netbsd386.c freebsd386.c i386mach3.c bout.c aout-adobe.c coff-we32k.c \
 	 i386bsd.c cpu-h8300.c cpu-i960.c cpu-sparc.c cpu-m68k.c \
 	 cpu-m88k.c cpu-vax.c cpu-mips.c cpu-a29k.c cpu-i386.c \
 	 cpu-rs6000.c coff-h8300.c som.c cpu-hppa.c cpu-we32k.c reloc16.c \
@@ -590,6 +591,10 @@ i386linux.o : i386linux.c \
  $(INCDIR)/aout/stab_gnu.h $(INCDIR)/aout/stab.def \
  $(INCDIR)/aout/ar.h libaout.h aout-target.h
 netbsd386.o : netbsd386.c \
+ libaout.h \
+ aout-target.h $(INCDIR)/aout/aout64.h $(INCDIR)/aout/stab_gnu.h \
+ $(INCDIR)/aout/stab.def $(INCDIR)/aout/ar.h
+freebsd386.o : freebsd386.c \
  libaout.h \
  aout-target.h $(INCDIR)/aout/aout64.h $(INCDIR)/aout/stab_gnu.h \
  $(INCDIR)/aout/stab.def $(INCDIR)/aout/ar.h
