--- a/devel/gdb/bfd/configure.in
+++ b/devel/gdb/bfd/configure.in
@@ -170,6 +170,7 @@ do
     i386aout_vec)		tb="$tb i386aout.o aout32.o stab-syms.o" ;;
     i386bsd_vec)		tb="$tb i386bsd.o aout32.o stab-syms.o" ;;
     netbsd386_vec)		tb="$tb netbsd386.o aout32.o stab-syms.o" ;;
+    freebsd386_vec)		tb="$tb freebsd386.o aout32.o stab-syms.o" ;;
     i386coff_vec)		tb="$tb coff-i386.o" ;;
     i386linux_vec)		tb="$tb i386linux.o aout32.o stab-syms.o" ;;
     i386lynx_aout_vec)		tb="$tb i386lynx.o lynx-core.o aout32.o stab-syms.o" ;;
