--- a/devel/gdb/gdb/Makefile.in
+++ b/devel/gdb/gdb/Makefile.in
@@ -808,7 +808,7 @@ ALLDEPFILES = 29k-share/udi/udip2soc.c 29k-share/udi/udr.c \
 	arm-pinsn.c arm-tdep.c arm-xdep.c coff-solib.c convex-pinsn.c \
 	convex-tdep.c \
 	convex-xdep.c core-svr4.c coredep.c corelow.c dcache.c delta68-nat.c \
-	dpx2-nat.c exec.c fork-child.c \
+	dpx2-nat.c exec.c fork-child.c freebsd-solib.c freebsd-nat.c \
 	go32-xdep.c gould-pinsn.c gould-xdep.c h8300-tdep.c h8500-tdep.c \
 	hp300ux-nat.c hppa-pinsn.c hppa-tdep.c hppab-nat.c hppah-nat.c \
 	i386-pinsn.c i386-tdep.c i386b-nat.c i386mach-nat.c i386v-nat.c \
@@ -1087,6 +1087,11 @@ findvar.o: findvar.c $(defs_h) $(gdbcore_h) $(inferior_h) target.h
 
 fork-child.o: fork-child.c $(wait_h) $(defs_h) $(gdbcore_h) \
 	$(inferior_h) target.h terminal.h
+
+freebsd-solib.o: freebsd-solib.c $(command_h) $(defs_h) $(gdbcore_h) \
+	$(inferior_h) objfiles.h regex.h symfile.h target.h
+
+freebsd-nat.o: freebsd-nat.c $(defs_h) 
 
 gdbtypes.o: gdbtypes.c $(bfd_h) complaints.h $(defs_h) $(expression_h) \
 	$(gdbtypes_h) language.h objfiles.h symfile.h $(symtab_h) target.h \
