--- a/devel/gdb/Makefile.in
+++ b/devel/gdb/Makefile.in
@@ -43,7 +43,7 @@ infodir = $(prefix)/info
 includedir = $(prefix)/include
 docdir = $(datadir)/doc
 
-SHELL = /bin/sh
+SHELL = /bin/bash
 
 INSTALL = $${srcroot}/install.sh -c
 INSTALL_PROGRAM = $(INSTALL)
@@ -930,13 +930,10 @@ gdb.tar.gz: setup-dirs-gdb
 	(cd gdb; $(MAKE) -f Makefile.in make-proto-testsuite.dir)
 	$(MAKE) $(MFLAGS) -f Makefile.in make-gdb.tar.gz
 
-pkg:	pkg_src pkg_bin
+pkg:	pkg_bin
 
-pkg_src: pkg/+DESC_S pkg/+ONELINE_S pkg/+PLIST_S
-	pkg_create -c pkg/+ONELINE_S -d pkg/+DESC_S -f pkg/+PLIST_S gdb_src
-
-pkg_bin: pkg/+DESC_B pkg/+ONELINE_B pkg/+PLIST_B
-	pkg_create -c pkg/+ONELINE_B -d pkg/+DESC_B -f pkg/+PLIST_B gdb_bin
+pkg_bin: pkg/+DESC pkg/+ONELINE pkg/+PLIST
+	pkg_create -c pkg/+ONELINE -d pkg/+DESC -f pkg/+PLIST gdb_bin
 
 make-gdb.tar.gz: $(DEVO_SUPPORT) $(GDB_SUPPORT_DIRS) gdb texinfo/texinfo.tex
 	rm -rf proto-toplev; mkdir proto-toplev
