Commit Todd Pfaff's changes to ensure the use of yacc over bison.  These changes are transitionary since we're going to be going to a Bmake environment soon.

--- a/devel/gdb/Makefile.in
+++ b/devel/gdb/Makefile.in
@@ -62,7 +62,7 @@ NM = nm
 MUNCH_NM = $(NM)
 GZIP = gzip
 
-BISON = bison -y
+BISON = yacc
 LEX = `if [ -f $${rootme}/flex/flex ] ; \
 	then echo $${rootme}/flex/flex ; \
 	else echo flex ; fi`
