--- a/devel/gdb/gdb/Makefile.in
+++ b/devel/gdb/gdb/Makefile.in
@@ -720,7 +720,7 @@ version.c: Makefile
 c-exp.tab.o: c-exp.tab.c
 c-exp.tab.c: c-exp.y Makefile.in
 	@echo 'Expect 6 shift/reduce conflicts.'
-	$(YACC) $(YFLAGS) $(srcdir)/c-exp.y
+	$(YACC) $(YFLAGS) -p c_ $(srcdir)/c-exp.y
 	-sed -e '/extern.*malloc/d' \
 	     -e '/extern.*realloc/d' \
 	     -e '/extern.*free/d' \
@@ -740,7 +740,7 @@ ch-exp.tab.o: ch-exp.tab.c
 # dependency, a parallel make will attempt to build both at the same
 # time and the second yacc will pollute the first y.tab.c file.
 ch-exp.tab.c: ch-exp.y Makefile.in c-exp.tab.c
-	$(YACC) $(YFLAGS) $(srcdir)/ch-exp.y
+	$(YACC) $(YFLAGS) -p ch_ $(srcdir)/ch-exp.y
 	-sed -e '/extern.*malloc/d' \
 	     -e '/extern.*realloc/d' \
 	     -e '/extern.*free/d' \
@@ -760,7 +760,7 @@ m2-exp.tab.o: m2-exp.tab.c
 # dependency, a parallel make will attempt to build both at the same
 # time and the second yacc will pollute the first y.tab.c file.
 m2-exp.tab.c: m2-exp.y Makefile.in ch-exp.tab.c
-	$(YACC) $(YFLAGS) $(srcdir)/m2-exp.y
+	$(YACC) $(YFLAGS) m2_ $(srcdir)/m2-exp.y
 	-sed -e '/extern.*malloc/d' \
 	     -e '/extern.*realloc/d' \
 	     -e '/extern.*free/d' \
