--- a/devel/gdb/opcodes/Makefile
+++ b/devel/gdb/opcodes/Makefile
@@ -2,17 +2,17 @@ BFD_MACHINES =  i386-dis.o
 # This file was generated automatically by configure.  Do not edit.
 VPATH = .
 links = sysdep.h
-host_alias = i386--netbsd
+host_alias = i386--freebsd
 host_cpu = i386
 host_vendor = 
-host_os = netbsd
-host_canonical = i386--netbsd
-target_alias = i386--netbsd
+host_os = freebsd
+host_canonical = i386--freebsd
+target_alias = i386--freebsd
 target_cpu = i386
 target_vendor = 
-target_os = netbsd
-target_canonical = i386--netbsd
-target_makefile_frag = ./../bfd/config/i386-netbsd.mt
+target_os = freebsd
+target_canonical = i386--freebsd
+target_makefile_frag = ./../bfd/config/i386-freebsd.mt
 host_makefile_frag = ../bfd/config/i386bsd.mh
 #    Makefile template for Configure for the opcodes library.
 #    Copyright (C) 1990, 1991, 1992 Free Software Foundation, Inc.
@@ -56,7 +56,7 @@ includedir = $(prefix)/include
 oldincludedir =
 docdir = $(srcdir)/doc
 
-SHELL = /bin/sh
+SHELL = /bin/bash
 
 INSTALL = install -c
 INSTALL_PROGRAM = $(INSTALL)
@@ -91,7 +91,7 @@ OFILES = $(BFD_MACHINES) dis-buf.o
 #### host and target dependent Makefile fragments come in here.
 # Target:  Intel 386 running netbsd, using (modified) a.out
 
-DEFAULT_VECTOR=netbsd386_vec
+DEFAULT_VECTOR=freebsd386_vec
 SELECT_ARCHITECTURES=bfd_i386_arch
 HDEFINES=-DTRAD_CORE
 HDEPFILES=trad-core.o
