--- a/devel/gdb/sim/Makefile
+++ b/devel/gdb/sim/Makefile
@@ -1,16 +1,16 @@
 # This file was generated automatically by configure.  Do not edit.
 VPATH = .
 links = 
-host_alias = i386--netbsd
+host_alias = i386--freebsd
 host_cpu = i386
 host_vendor = 
-host_os = netbsd
-host_canonical = i386--netbsd
-target_alias = i386--netbsd
+host_os = freebsd
+host_canonical = i386--freebsd
+target_alias = i386--freebsd
 target_cpu = i386
 target_vendor = 
-target_os = netbsd
-target_canonical = i386--netbsd
+target_os = freebsd
+target_canonical = i386--freebsd
 #    Makefile template for Configure for the sim library.
 #    Copyright (C) 1993 Free Software Foundation, Inc.
 #    Written by Cygnus Support.
@@ -56,7 +56,7 @@ includedir = $(prefix)/include
 oldincludedir =
 docdir = doc
 
-SHELL = /bin/sh
+SHELL = /bin/bash
 
 INSTALL = $${srcroot}/../install.sh -c
 INSTALL_PROGRAM = $(INSTALL)
