--- a/editor/emacs/src/Makefile.in
+++ b/editor/emacs/src/Makefile.in
@@ -22,8 +22,8 @@ the Free Software Foundation, 675 Mass Ave, Cambridge, MA 02139, USA.  */
 /* MAKE = make */
 
 /* Here are the things that we expect ../configure to edit. */
-srcdir=/a/rich/w/emacs/src
-VPATH=/a/rich/w/emacs/src
+srcdir=.
+VPATH=.
 CC=gcc
 CPP=gcc -E
 CFLAGS=-g -O 
