Updated to 0.79 Makefiles generated by ./configure. removed a lot of files that had disappeared in th new release and some *.d dependency files.

--- a/math/octave/octave/Makeconf.in
+++ b/math/octave/octave/Makeconf.in
@@ -18,6 +18,7 @@ YACC = @YACC@
 YFLAGS = -dv
 
 INSTALL = @INSTALL@
+INSTALL_PROGRAM = @INSTALL_PROGRAM@
 INSTALL_DATA = @INSTALL_DATA@
 
 RANLIB = @RANLIB@
@@ -45,12 +46,8 @@ CC = @CC@
 CFLAGS = @CFLAGS@
 ALL_CFLAGS = $(INCFLAGS) $(DEFS) $(CFLAGS)
 
-ifeq ($(CXX), )
-  CXX = $(C++)
-endif
-
-CXXFLAGS = @CXXFLAGS@   # GNU Make 3.63 and beyond
-C++FLAGS = $(CXXFLAGS)  # backward compatibility
+CXX = @CXX@
+CXXFLAGS = @CXXFLAGS@
 ALL_CXXFLAGS = $(INCFLAGS) $(DEFS) $(CXXFLAGS)
 
 LDFLAGS = @LDFLAGS@
@@ -67,7 +64,7 @@ version = `$(getversion) $(srcdir)/$(TOPDIR)/src/version.h`
 
 # Common prefix for installation directories.
 # NOTE: This directory must exist when you start installation.
-prefix = /usr/gnu
+prefix = /usr/local
 
 # Directory in which to put host dependent programs and libraries
 exec_prefix = $(prefix)
