--- a/math/octave/octave/Makefile.in
+++ b/math/octave/octave/Makefile.in
@@ -19,7 +19,7 @@ DISTFILES = COPYING ChangeLog Makefile.in Makeconf.in NEWS README \
 	config.guess octave.sh octave-mode.el doinstall.sh mkpath.c
 
 # Complete directory trees to distribute.
-DISTDIRS = bsd-math dld
+DISTDIRS = dld
 
 # Subdirectories to run make in for the primary targets.
 SUBDIRS = libcruft liboctave @DLD_DIR@ info readline src doc scripts 
