ve to rename the octave target to make-octave as we have a octave sub-directory. (Does bsd-make have .PHONY targets?) Also added ./ before configure to make sure we execute the right one.

--- a/math/octave/Makefile
+++ b/math/octave/Makefile
@@ -1,11 +1,11 @@
-all: octave
+all: make-octave
 
-octave:
+make-octave:
 	cd octave; \
-	configure; \
+	./configure; \
 	gmake
 
-install: octave
+install: make-octave
 	cd octave; \
 	gmake install
 clean:
