Forgot to add the pkg/ after moving the pkg files into the pkg sub-directory.

--- a/math/octave/Makefile
+++ b/math/octave/Makefile
@@ -14,4 +14,4 @@ clean:
 
 pkg:	all install pkg/+ONELINE pkg/+PLIST
 	strip /usr/gnu/bin/octave
-	pkg_create -v -c +ONELINE -d README.FreeBSD -f +PLIST octave_bin
+	pkg_create -v -c pkg/+ONELINE -d README.FreeBSD -f pkg/+PLIST octave_bin
