Look for tk and tcl in proper locations again

--- a/net/tcl-dp/Makefile.in
+++ b/net/tcl-dp/Makefile.in
@@ -52,12 +52,12 @@ MANN_DIR =	$(MAN_DIR)/mann
 # The directory containing the Tcl sources and headers appropriate
 # for this version of Tcl-DP ("@srcdir@" will be replaced or has already
 # been replaced by the configure script):
-TCL_DIR =	@srcdir@/../tcl
+TCL_DIR =	@srcdir@/../../lang/tcl
 
 # The directory containing the Tk sources and headers appropriate
 # for this version of Tcl-DP ("@srcdir@" will be replaced or has already
 # been replaced by the configure script):
-TK_DIR =	@srcdir@/../tk
+TK_DIR =	@srcdir@/../../x11/tk
 
 # The directory containing the Tcl library archive file appropriate
 # for this version of Tcl-DP:
