Added package information.

--- a/util/iozone/Makefile
+++ b/util/iozone/Makefile
@@ -3,4 +3,9 @@ SRCS=	iozone.c
 NOMAN=	YES
 BINDIR?= /usr/local/bin
 
+pkg: pkg_bin
+
+pkg_bin: install
+	pkg_create -c pkg/+ONELINE -d pkg/+DESC -f pkg/+PLIST iozone_bin
+
 .include <bsd.prog.mk>
